<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainMenu">
    <TextView
            android:text="@string/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/welcomeMessage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.026"
            android:padding="20dp" android:textSize="24sp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/orderDeluxeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/orderDeluxeButtonText" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.265" android:padding="20dp"
            app:layout_constraintHorizontal_bias="0.497"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/orderHawaiianButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.404"
            android:text="@string/orderHawaiianButtonText" android:padding="20dp"
            app:layout_constraintHorizontal_bias="0.497"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/orderPepperoniButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.546"
            android:text="@string/orderPepperoniButtonText" android:padding="20dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/viewCurrentOrderButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.69"
            android:text="@string/viewCurrentOrderButtonText" android:padding="20dp"
            app:layout_constraintHorizontal_bias="0.497"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/viewListOfStoreOrdersButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.83"
            android:text="@string/viewListOfStoreOrdersText" android:padding="20dp"
            app:layout_constraintHorizontal_bias="0.497"/>
</androidx.constraintlayout.widget.ConstraintLayout>